--- a/wk24/react-myApp/index.html
+++ b/wk24/react-myApp/index.html
@@ -9,28 +9,35 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <div class="wrap">
+
+    <div class="container">
         <header>
             <div class="title">
-                <h2>
-                    Daily Todo List
-                </h2>
+                Daily Todo List
             </div>
         </header>
         <section>
-            <div class="content">
-                <div class="note">
-                    <p>list1</p>
+            <div class="notes">
+                <div class="note new-note">
+                    <!-- <div class="form-group"> -->
+                        <input type="text" class="form-control" id="note-input" placeholder="Add note">
+                    <!-- </div> -->
+                    <i class="fas fa-plus-square"></i>
                 </div>
                 <div class="note">
-                    <p>item2</p>
+                    <div class="note-text">
+                        Watch TV
+                    </div>
+                    <i class="fas fa-minus-circle"></i>
+                </div>
+                <div class="note">
+                    <div class="note-text">
+                        Do stuff
+                    </div>
+                    <i class="fas fa-minus-circle"></i>
                 </div>
             </div>
         </section>
-    </div> -->
-
-    <div class="container">
-
     </div>
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
